--- a/jsiapp/jsiapp.vcxproj
+++ b/jsiapp/jsiapp.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{3C5E93FB-25DB-4A8C-88B9-12A2BEC45302}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>jsiapp</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -110,7 +110,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\deps\Office.Google_V8.1.1.0\lib\x64\Debug;</AdditionalLibraryDirectories>
       <AdditionalDependencies>v8.dll.lib;v8_libplatform.dll.lib;"..\deps\Folly\libs\Folly.lib";"..\deps\Folly\libs\FollyWin32.lib";kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -161,8 +161,6 @@
     <ClInclude Include="scripthost.h" />
     <ClInclude Include="typedjsi.h" />
     <ClInclude Include="V8Runtime.h" />
-    <ClInclude Include="winhost.h" />
-    <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -174,20 +172,12 @@
     <ClCompile Include="scripthost.cpp" />
     <ClCompile Include="typedjsi.cpp" />
     <ClCompile Include="V8Runtime.cpp" />
-    <ClCompile Include="winhost.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="jsiapp.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="jsiapp.ico" />
-    <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
