--- a/jsiapp/jsiapp.vcxproj.filters
+++ b/jsiapp/jsiapp.vcxproj.filters
@@ -41,6 +41,15 @@
     <ClInclude Include="typedjsi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inspector_agent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="v8_inspector_protocol_json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inspector_socket_server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -68,6 +77,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="bgeventloop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="inspector_agent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
