--- a/jsiapp/jsiapp.vcxproj
+++ b/jsiapp/jsiapp.vcxproj
@@ -76,7 +76,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>.;..\deps\stubs;..\deps\Office.Google_V8.1.1.0\build\include;..\deps\boost.1.68.0.0\lib\native\include;..\deps\Folly\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>..\deps\llhttp\include;.;..\deps\stubs;..\deps\Office.Google_V8.1.1.0\build\include;..\deps\boost.1.68.0.0\lib\native\include;..\deps\Folly\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <LibraryPath>..\deps\boost_system-vc141.1.68.0.0\lib\native;..\deps\boost_date_time-vc141.1.68.0.0\lib\native;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -154,13 +154,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="base64.h" />
     <ClInclude Include="eventloop.h" />
     <ClInclude Include="inspector_agent.h" />
+    <ClInclude Include="inspector_socket.h" />
     <ClInclude Include="inspector_socket_server.h" />
     <ClInclude Include="instrumentation.h" />
     <ClInclude Include="jsi-inl.h" />
     <ClInclude Include="jsi.h" />
     <ClInclude Include="JSIDynamic.h" />
+    <ClInclude Include="logger.h" />
     <ClInclude Include="scripthost.h" />
     <ClInclude Include="typedjsi.h" />
     <ClInclude Include="V8Runtime.h" />
@@ -172,9 +175,11 @@
     <ClCompile Include="bgeventloop.cpp" />
     <ClCompile Include="eventloop.cpp" />
     <ClCompile Include="inspector_agent.cpp" />
+    <ClCompile Include="inspector_socket.cc" />
     <ClCompile Include="inspector_socket_server.cpp" />
     <ClCompile Include="jsi.cpp" />
     <ClCompile Include="JSIDynamic.cpp" />
+    <ClCompile Include="logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scripthost.cpp" />
     <ClCompile Include="typedjsi.cpp" />
